--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               <p><em>Peridot Kuching, Kuching, Sarawak, Malaysia</em></p>
               <ul>
                 <li>Designed numerous marketing materials (logos, brochures, infographics, presentations, and advertisements).</li>
-                <li>Managed, keeped web page content and links up to date, found and fixed web page problems.</li>
+                <li>Managed, kept web page content and links up to date, found and fixed web page problems.</li>
                 <li>Processed and received payments and issued receipts to customers.</li>
               </ul>
             </div>
