--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>12 August 1995</span></li>                  
                   <li><i class="bi bi-chevron-right"></i> <strong>Nationality:</strong> <span>Uzbekistan</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's Degree in Computer Science</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master's Degree in Computer Science</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+968 9783 4777</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+998 99 602 9728</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sardor_kb@outlook.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Al Buraimi, Sultanate of Oman</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Kokand city, Ferghana region</span></li>
                 </ul>
               </div>
             </div>
@@ -210,34 +210,35 @@
               <h4>Sardorjon Mirzakarimov</h4>
               <p><em>Innovative and deadline-driven Developer with 2+ years of experience designing and developing user-centered software and web systems from initial concept to final, polished deliverable.</em></p>
               <ul>
-                <li>Al Buraimi 512, Sultanate of Oman</li>
-                <li>(968) 9783-4777</li>
+                <li>Kokand city, Ferghana region</li>
+                <li>(998) 99 602 9728</li>
                 <li>sardor_kb@outlook.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
+              <div class="resume-item">
+              <h4>Master's Degree in Computer Science (Software Engineering)</h4>
+              <h5>2020 - 2021</h5>
+              <p><em>University Malaysia Sarawak, Kota Samarahan, Sarawak, Malaysia</em></p>
+              <p>Thesis: Enhancing Software Security through Machine Learning-Based Anomaly Detection. This thesis explores the integration of machine learning techniques to bolster software security by detecting anomalies in system behavior.</p>
+            </div>
+              
               <h4>Bachelor's Degree in Computer Science (Software Engineering)</h4>
-              <h5>2016 - 2021</h5>
+              <h5>2016 - 2020</h5>
               <p><em>University Malaysia Sarawak, Kota Samarahan, Sarawak, Malaysia</em></p>
               <p>Developed a Grade and Monitor Web System for primary school.<br>
               The scope of the project was to allow the primary school to manage and track pupils’ grades through a web-based grading and monitoring system. 
               This system also allows the guardian or parents to monitor their child’s grades online. With the adaption of such system, our aim was to make it easier for the school management to harness and fast track all pupils’ grades in one centralized database.</p>
             </div>
-            <div class="resume-item">
-              <h4>Diploma in Accounting &amp; Audit</h4>
-              <h5>2011 - 2014</h5>
-              <p><em>Kokand Service and Business Vocational College, Kokand City, Ferghana, Uzbekistan</em></p>
-              <p>Completed the full course of Accounting and Audit.<br>
-              Gained profession as an Accountant. Qualified as Accountant of Budget Organizations, Accountant of Economic Account and Cashier.</p>
-            </div>
+            
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Branch Manager &amp; Web Admin</h4>
-              <h5>January 2021 - Present</h5>
+              <h4>Branch Manager and Web Developer</h4>
+              <h5>January 2022 - August 2023</h5>
               <p><em>Tayr Al Ymamt Trading S.P.C, Al Buraimi, Sultanate of Oman</em></p>
               <ul>
                 <li>Lead in the design, development, and implementation of the e-commerce web system and maintaining it.</li>
@@ -246,7 +247,17 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Web Admin &amp; Cashier </h4>
+              <h4>Web Developer</h4>
+              <h5>January 2021 - January 2022</h5>
+              <p><em>TFrenchPharm FZC, Sharjah, United Arab Emirates</em></p>
+              <ul>
+                <li>Lead in the design, development, and implementation of the e-commerce web system and maintaining it.</li>
+                <li>Manage resources and staff developing and attaining sales goals.</li>
+                <li>Overseeing and coordinating all operations.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Web Developer and Admin</h4>
               <h5>July 2019 - December 2020</h5>
               <p><em>Peridot Kuching, Kuching, Sarawak, Malaysia</em></p>
               <ul>
@@ -467,7 +478,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Al Buraimi 512, Al Buraimi Governorate, Sultanate of Oman</p>
+                <p>Kokand city, Ferghana region, Uzbekistan</p>
               </div>
 
               <div class="email">
@@ -479,10 +490,9 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+968 9783 4777</p>
+                <p>+998 99 602 9728</p>
               </div>
-
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4325.753209393695!2d55.79344546366401!3d24.258898217097396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2som!4v1671043110107!5m2!1sen!2som" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6554.30432893196!2d70.93618818846753!3d40.527789392597654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38baeeeb2e1c3e7f%3A0x816d723cc5842908!2sKokand%2C%20Uzbekistan!5e0!3m2!1sen!2s!4v1701198254892!5m2!1sen!2s" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
