--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Graduated with my Bachelor's in Computer Sciences with a concentration in Software and Web Development. I gained experience in analyzing and solving the problems related to
+          <p>Graduated with my Bachelor's and Master's in Computer Sciences with a concentration in Software and Web Development. I gained experience in analyzing and solving the problems related to
             software and web systems. As well as I experienced in real life software and web system design and development. I am also able to use variety of electronic devices and understand basic concepts and techniques. During my internship I accomplished in generating and
             implementing new algorithms.
           </p>
