--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+998 99 602 9728</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+998 88 712 4422</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sardor_kb@outlook.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Address:</strong> <span>Kokand city, Ferghana region</span></li>
                 </ul>
@@ -236,6 +236,16 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Web developer</h4>
+              <h5>December 2023 - Current</h5>
+              <p><em>Baraka Development, Kokand, Uzbekistan</em></p>
+              <ul>
+                <li>Developing and maintaining inner system of Baraka Development.</li>
+                <li>Developed, deployed and managing the online store of Baraka Development in company's own Ubuntu server.</li>
+                <li>Developed and integrated products from Microsoft Access into Telegram bot.</li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>Branch Manager and Web Developer</h4>
               <h5>January 2022 - August 2023</h5>
